--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
             name="description"
             content="Web site created using create-react-app"
     />
+
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -19,6 +20,7 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script
         src="https://kit.fontawesome.com/d9dd2dc23a.js"
         crossorigin="anonymous"
